# Metal-Study

./: .gitignore  CAMetalLayer.cpp  CAMetalLayer.hpp  CMakeLists.txt  CocoaWindow.cpp  CocoaWindow.hpp  ImageIO.cpp  ImageIO.hpp  NSView.cpp  NSView.hpp  NSWindow.cpp  NSWindow.hpp  Renderer.cpp  Renderer.hpp  ShaderTypes.h  Sprite.metal  main.cpp  mtlcompile.sh  readme.md
CMake/: FindFreeImage.cmake  FindGLM.cmake
